Refactor hero section and update company description

--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,8 @@
 
 <body>
 
+  <div class="bus-bg"></div>
+
   <!-- ================= HEADER ================= -->
   <!-- HEADER: логотип + nav -->
   <header class="header">
@@ -34,27 +36,26 @@
   </header>
 
   <!-- HERO: большой текст (КАК НА КАРТИНКЕ) -->
-  <section class="hero">
+  <section class="hero hero-cinema">
 
-    <h2>
-      Надёжные и комфортные рейсы каждый день
-    </h2>
-
-    <h3>
-      Алматы — Тараз — Шымкент — Сарагаш
-    </h3>
-
-    <p>
-      🚌 Лежачие места • 🔥 Удобство • 💯 Гарантия безопасности
-      <br>
-      Туризм • Аренда • Межгород
-    </p>
-
-    <div class="hero-buttons">
-      <a href="#routes" class="btn btn-main">Найти маршрут</a>
-      <a href="#buses" class="btn btn-second">Наши автобусы</a>
+    <canvas id="canvas"></canvas>
+  
+    <div class="hero-content">
+      <h2>Надёжные и комфортные рейсы</h2>
+      <h3>Алматы • Тараз • Шымкент • Сарыагаш</h3>
+  
+      <p>
+        🚌 Лежачие места · 🔥 Комфорт · 💯 Безопасность  
+        <br>
+        Туризм · Аренда · Межгород
+      </p>
+  
+      <div class="hero-buttons">
+        <a href="#routes" class="btn btn-main">Найти маршрут</a>
+        <a href="#buses" class="btn btn-second">Наши автобусы</a>
+      </div>
     </div>
-
+  
   </section>
 
   <!-- ================= ABOUT ================= -->
@@ -62,11 +63,13 @@
     <div class="container">
       <h2>О компании TULPAR</h2>
       <p>
-        Компания <strong>TULPAR</strong> — это надёжные межгородские пассажирские перевозки
-        и аренда комфортных автобусов.
-        Мы ежедневно выполняем рейсы по популярным направлениям и
-        предоставляем автобусы для туризма, мероприятий и заказных поездок.
-      </p>
+        <strong>TULPAR</strong> — это современные межгородские перевозки
+        с упором на комфорт, безопасность и стабильность.
+        <br><br>
+        Мы работаем ежедневно, используем комфортабельные автобусы
+        с лежачими местами и обеспечиваем удобные поездки
+        по ключевым направлениям юга Казахстана.
+        </p>
     </div>
   </section>
 
@@ -155,7 +158,6 @@
       </div>
     </div>
   </section>
-
   <!-- ================= BUSES ================= -->
   <section id="buses">
     <div class="container">
